# open-env-2

./: .dockerignore  .gitignore  README.md  client.py  models.py  my_env.py  pyproject.toml
open env/: Dockerfile  __init__.py  inference.py  my_env.py  openenv.yaml  pyproject.toml  requirements.txt
open env/email_triage_smart_response_system.egg-info/: SOURCES.txt  requires.txt
open env/server/: app.py  requirements.txt
server/: Dockerfile
