[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-smart-response-system"
version = "0.1.0"
description = "OpenEnv environment for email triage, prioritization, and smart response generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "openenv-core>=0.2.0",
    "openai>=2.7.2,<3.0.0",
    "pydantic>=2.8.0,<3.0.0",
    "requests>=2.32.0,<3.0.0",
    "uvicorn>=0.30.0,<1.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["server"]
py-modules = ["client", "models", "my_env", "inference"]
